--- a/start.css
+++ b/start.css
@@ -15,9 +15,9 @@
 .pencet{
     text-decoration: none;
     color: white;
-    font-family: "Playwrite NG Modern", cursive;
-    font-optical-sizing: auto;
-    font-style: normal;
+   font-family: "Bona Nova SC", serif;
+  font-weight: 400;
+  font-style: normal;
     font-size: 20px;
 
 }
